objects/FLODocs__FLO_Test_Record__c.object
<CustomObject>
    <description>These records are used to track tests within the Strongpoint Documentation System</description>
    <fields>
        <fullName>FLODocs__Assign_Process_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process Owner to be assigned into the Test Record</description>
        <inlineHelpText>Process Owner to be assigned into the Test Record</inlineHelpText>
        <label>Assign Process Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Change_Tested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is  the change being tested.</description>
        <inlineHelpText>This is  the change being tested.</inlineHelpText>
        <label>Change Tested</label>
        <referenceTo>FLODocs__FLO_Change_Request__c</referenceTo>
        <relationshipLabel>Test Records</relationshipLabel>
        <relationshipName>FLO_Test_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Create_for_CR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create for CR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__Customization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>These are the customizations being tested.  This field is optional but should be used if the test did not fully complete.</description>
        <inlineHelpText>These are the customizations being tested.  This field is optional but should be used if the test did not fully complete.</inlineHelpText>
        <label>Customization</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Test Records</relationshipLabel>
        <relationshipName>FLO_Test_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Input_Fields__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Data input to test - or to make any Regression, Exploratory test</description>
        <inlineHelpText>Data input to test - or to make any Regression, Exploratory test</inlineHelpText>
        <label>Data Input Fields</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Test Records (Data Input Fields)</relationshipLabel>
        <relationshipName>FLO_Test_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Input_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Input Form</label>
        <referenceTo>FLODocs__FLO_Customization__c</referenceTo>
        <relationshipLabel>Test Records (Data Input Form)</relationshipLabel>
        <relationshipName>FLO_Test_Records2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_set__c</fullName>
        <description>Data set selected for the Test</description>
        <inlineHelpText>Data set selected for the Test</inlineHelpText>
        <label>Data set</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Expected_Outcome__c</fullName>
        <description>Expected outcome to be add manually for the test</description>
        <inlineHelpText>Expected outcome to be add manually for the test</inlineHelpText>
        <label>Expected Outcome</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Parent_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the parent testing record.</description>
        <inlineHelpText>This is the parent testing record.</inlineHelpText>
        <label>Parent Test</label>
        <referenceTo>FLODocs__FLO_Test_Record__c</referenceTo>
        <relationshipLabel>Test Records</relationshipLabel>
        <relationshipName>FLO_Test_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Process_Issue_Tested__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the process issue that the test relates to.</description>
        <inlineHelpText>This is the process issue that the test relates to.</inlineHelpText>
        <label>Process Issue Tested</label>
        <referenceTo>FLODocs__FLO_Process_Issue__c</referenceTo>
        <relationshipLabel>Test Records</relationshipLabel>
        <relationshipName>FLO_Test_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the process being tested.</description>
        <inlineHelpText>This is the process being tested.</inlineHelpText>
        <label>Process</label>
        <referenceTo>FLODocs__FLO_Process__c</referenceTo>
        <relationshipLabel>Test Records</relationshipLabel>
        <relationshipName>FLO_Test_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Status__c</fullName>
        <description>This is the status of the test.</description>
        <inlineHelpText>This is the status of the test.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Test_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Notes__c</fullName>
        <description>These are the tester&apos;s notes from the test.</description>
        <inlineHelpText>These are the tester&apos;s notes from the test.</inlineHelpText>
        <label>Test Notes</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Number__c</fullName>
        <description>Number of the FLO Test Record</description>
        <inlineHelpText>Number of the FLO Test Record</inlineHelpText>
        <label>Test Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Script__c</fullName>
        <description>This is the test plan from the process or step that you are testing.</description>
        <inlineHelpText>This is the test plan from the process or step that you are testing.</inlineHelpText>
        <label>Test Script</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Template</label>
        <referenceTo>FLODocs__FLO_Test_Record__c</referenceTo>
        <relationshipLabel>Test Records (Test Template)</relationshipLabel>
        <relationshipName>FLO_Test_Records1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FLODocs__Test_Type__c</fullName>
        <description>This is the type of test being conducted.  New processes and customizations may go through repeated testing cycles. Unit testing is done by the implementer, developer or analyst who created the process or customization.  Beta testing is performed by the operational team to identify key issues. Acceptance is performed by the operational team to confirm all processes are resolved.  Quarterly and Annual Testing is performed by the operational team to confirm process compliance.</description>
        <inlineHelpText>This is the type of test being conducted.</inlineHelpText>
        <label>Test Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FLODocs__FLO_Test_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLODocs__UPDATE_CHILD_ASSIGNED__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Deprecated</description>
        <inlineHelpText>Deprecated</inlineHelpText>
        <label>UPDATE CHILD ASSIGNED</label>
        <type>Checkbox</type>
    </fields>
    <label>Test Record</label>
    <nameField>
        <label>Test Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Test Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>